feat:Dynamic headers

--- a/QoEDisplay/index.html
+++ b/QoEDisplay/index.html
@@ -46,19 +46,19 @@
       <!-- 左侧盒子 -->
       <div class="column">
         <div class="panel http">
-          <h2>网页浏览业务</h2>
+          <h2>网页浏览业务-大学</h2>
           <!-- 图表放置盒子 -->
           <div class="chart"></div>
           <!-- 伪元素绘制盒子下边角 -->
           <div class="panel-footer"></div>
         </div>
         <div class="panel video">
-          <h2>视频播放业务</h2>
+          <h2>视频播放业务-大学</h2>
           <div class="chart"></div>
           <div class="panel-footer"></div>
         </div>
         <div class="panel im">
-          <h2>微信业务</h2>
+          <h2>微信业务-大学</h2>
           <div class="chart"></div>
           <div class="panel-footer"></div>
         </div>
@@ -80,17 +80,17 @@
       <!-- 右侧盒子 -->
       <div class="column">
         <div class="panel q">
-          <h2>QoE</h2>
+          <h2>QoE-大学</h2>
           <div class="chart"></div>
           <div class="panel-footer"></div>
         </div>
         <div class="panel pdf">
-          <h2>概率密度</h2>
+          <h2>概率密度-大学</h2>
           <div class="chart"></div>
           <div class="panel-footer"></div>
         </div>
         <div class="panel pie">
-          <h2>权重</h2>
+          <h2>权重-大学</h2>
           <div class="chart"></div>
           <div class="panel-footer"></div>
         </div>
